# video_segment_splitter

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  run_test_suite.sh  rxconfig.py
video_segment_splitter/: video_segment_splitter.py
video_segment_splitter/components/: controls.py  metadata_card.py  system_monitor.py  upload_zone.py
video_segment_splitter/states/: system_state.py  video_state.py
