[tool.poetry]
name = "video-segment-splitter"
version = "0.1.0"
description = "A Reflex app for splitting video segments"
authors = ["milochen0418 <milo_chen@mail2000.com.tw>"]
readme = "README.md"
packages = [{ include = "video_segment_splitter" }]

[tool.poetry.dependencies]
python = "~3.11"
reflex = "0.8.24.post1"
moviepy = "*"
granian = "2.7.1"
reflex-mouse-track = "*"
fastapi = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "playwright (>=1.58.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
